<resources>
    <string name="app_name">Role</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="event_name">Exemplo de Título</string>
    <string name="event_banner">event_banner</string>
    <string name="icon_place">icon_place</string>
    <string name="event_place">PARK SHOPPING - MADUREIRA</string>
    <string name="event_time">event_time</string>
    <string name="event_hour">SEG, 17 Julho - 6:00 PM</string>
    <string name="eventFlag1">Gratis</string>
    <string name="eventFlag2">OpenBar</string>
    <string name="eventRanking">4.7</string>
    <string name="eventDescription">Evento comunitário da Igreja São Bartolomeu, entrada grátis com 1kg de alimento opcional.</string>
    <string name="eventAction1">#PARTIU</string>
    <string name="eventParticipantNumber">1564</string>
    <string name="see_less">Ver Menos</string>
    <string name="see_more">VER MAIS</string>
    <string name="maybe">talvez</string>
    <string name="go">#partiu</string>
    <string name="people">Pessoas</string>
    <string name="rating">Avaliação</string>
    <string name="how_to_arrive">Como chegar</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="suggested">Sugeridos</string>
    <string name="highlighted">Em Destaque</string>
    <string name="near_you">Perto de Você</string>

    <string name="categories">Categorias</string>
    <string name="free_events">Eventos Gratuitos</string>
    <string name="place">Local</string>
    <string name="use_my_place">Usar meu local</string>
    <string name="date">Data</string>
    <string name="eventFlag3">Hip Hop</string>
    <string name="eventFlag4">Sertanejo</string>
    <string name="eventFlag5">Pagode</string>
    <string name="actives">ativos</string>
    <string name="inactives">inativos</string>
    <string name="avaliate">Avaliar</string>

    <string name="filter_events">Filtrar Eventos</string>
    <string name="category">Categoria</string>
    <string name="place_1">Local</string>
    <string name="apply_filters">APLICAR FILTROS</string>


</resources>
