<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="0dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginTop="0dp"
    app:cardBackgroundColor="@color/whiteText"
    app:cardCornerRadius="4dp"
    app:cardElevation="3dp"
    app:cardMaxElevation="3dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/iv_myevent"
            android:layout_width="300px"
            android:layout_height="220px"
            android:adjustViewBounds="false"
            android:scaleType="centerCrop"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/event_banner"/>

        <TextView
            android:id="@+id/tv_myevent_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/iv_myevent"
            android:layout_marginLeft="@dimen/content_distance_right_left"
            android:text="@string/event_name"
            android:textColor="@color/eventBlack"
            android:textSize="@dimen/event_flags_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_myevent_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_myevent_name"
            android:layout_toRightOf="@+id/iv_myevent"
            android:layout_marginTop="@dimen/content_distance_top_bottom"
            android:layout_marginLeft="@dimen/content_distance_right_left"
            android:maxLines="1"
            android:textSize="@dimen/text_size_small"
            android:text="@string/eventDescription"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_myevent_about"
            android:layout_toRightOf="@+id/iv_myevent"
            android:layout_marginLeft="@dimen/content_distance_right_left"
            android:layout_marginTop="@dimen/content_distance_top_bottom"
            android:text="23/02/16"
            android:textColor="@color/eventBlack"/>

        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_myevent_about"
            android:layout_marginTop="@dimen/content_distance_top_bottom"
            android:layout_marginRight="@dimen/content_distance_right_left"
            android:layout_marginLeft="@dimen/content_distance_right_left"
            android:layout_alignParentRight="true"
            android:padding="3px"
            android:background="@color/colorAccent"
            android:text="@string/avaliate"
            android:textColor="@color/eventBlack"
            android:textSize="@dimen/text_size_small"
            />
    </RelativeLayout>

</android.support.v7.widget.CardView>