<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free_events"
            android:id="@+id/cb_eventos_gratuitos"
            android:checked="false"
            android:textSize="@dimen/text_title_size"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_alignParentStart="false" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/lines_size"
            android:id="@+id/horizontalLine1"
            android:layout_below="@+id/cb_eventos_gratuitos"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:background="@color/colorDivider" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/categories"
            android:id="@+id/tv_categorias"
            android:textSize="@dimen/text_title_size"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="8dp"
            android:layout_below="@+id/tv_categorias"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/relativeLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/eventFlag3"
                android:id="@+id/eventFlags_3"
                android:textSize="@dimen/event_flags_text_size"
                android:layout_alignParentTop="false"
                android:layout_alignParentLeft="false"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginLeft="@dimen/eventFlags_distance"
                android:background="@drawable/flag_border_bg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/eventFlag4"
                android:id="@+id/eventFlags_4"
                android:textSize="@dimen/event_flags_text_size"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_alignParentTop="false"
                android:layout_toRightOf="@+id/eventFlags_3"
                android:layout_marginLeft="@dimen/eventFlags_distance"
                android:background="@drawable/flag_border_bg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/eventFlag5"
                android:id="@+id/eventFlags_5"
                android:textSize="@dimen/event_flags_text_size"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_alignParentTop="false"
                android:layout_toRightOf="@+id/eventFlags_4"
                android:layout_marginLeft="@dimen/eventFlags_distance"
                android:background="@drawable/flag_border_bg" />

        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="\@string/see_more"
            android:id="@+id/bt_ver_mais"
            android:layout_below="@+id/relativeLayout"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorAccent"
            style="?android:attr/borderlessButtonStyle"/>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/lines_size"
            android:id="@+id/horizontalLine2"

            android:background="@color/colorDivider"

            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/bt_ver_mais" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/place"
            android:id="@+id/tv_local"
            android:textSize="@dimen/text_title_size"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_my_place"
            android:id="@+id/cb_usar_meu_local"
            android:checked="false"
            android:layout_below="@+id/tv_local"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/text_title_size"
            android:layout_marginLeft="20dp"
            android:layout_alignParentStart="true"
            android:padding="8dp" />

        <Spinner
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:id="@+id/sp_cidade"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/cb_usar_meu_local"
            android:padding="8dp"
            android:layout_alignRight="@+id/sp_bairro"
            android:layout_alignLeft="@+id/sp_bairro"
            android:spinnerMode="dropdown" />

        <Spinner
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:id="@+id/sp_bairro"
            android:layout_gravity="center_horizontal"
            android:padding="8dp"
            android:layout_below="@+id/sp_cidade"
            android:layout_centerHorizontal="true"
            android:spinnerMode="dropdown" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/lines_size"
            android:id="@+id/horizontalLine3"
            android:background="@color/colorDivider"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/sp_bairro"
            android:layout_alignBottom="@+id/sp_bairro" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/date"
            android:id="@+id/tv_data"
            android:textSize="@dimen/text_title_size"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp" />

        <Spinner
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:id="@+id/sp_data"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/tv_data"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:spinnerMode="dropdown" />
    </RelativeLayout>

</LinearLayout>